Fixed footer on Safari Mobile.

--- a/web/less/footer.less
+++ b/web/less/footer.less
@@ -28,8 +28,10 @@ div#footerWrapper {
   border-top-width: 1px;
   border-top-color: rgba(0,0,0,.125);
   width: 100%;
-  //height: 50px;
+  height: 48px;
   //position: relative;
+  //-webkit-transform:translateZ(0);
+  //bottom: 0px;
 }
 
 
