--- a/web/less/main.less
+++ b/web/less/main.less
@@ -1,11 +1,10 @@
 body {
-  background: white;
   background-color: #ffffff;
   /* min-height: 100%; */
   /* margin: 0 auto; */
   /* width: fit-content; */
   height: 100vh;
-  //width: 100vh;
+  width: 100vh;
   margin: 0px;
 }
 
@@ -23,6 +22,7 @@ body {
 
 div#MainWrapper {
   //height: calc(100% - 100px);
+  //height: calc(100% - 50px);
   height: 100%;
   //width: 95%;
 }
@@ -86,7 +86,6 @@ div#AboutMeWrapper {
 }
 
 div#mainPage {
-  //height: 100%;
   //width: 100%;
   //height: 100%;
   height: calc(100% - 100px);
