--- a/web/less/navigation.less
+++ b/web/less/navigation.less
@@ -1,5 +1,6 @@
 div#nav_bar {
   position: relative;
+  display: grid;
   border-bottom-style: solid;
   border-bottom-width: 1px;
   border-bottom-color: rgba(0,0,0,.125);
